layout issue fixed

--- a/index.css
+++ b/index.css
@@ -81,7 +81,7 @@ header  {
     /* box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px; */
     position: sticky;
     top:0;
-    padding: 0.1rem 12rem 0;
+    padding: 0.1rem 2rem 0;
     z-index: 999;
 
 }
@@ -135,6 +135,7 @@ header  {
 
 
   .main {
+    text-align: center;
     padding-top: 12rem;
     width: 100%;
     height: 700px;
@@ -196,6 +197,7 @@ background: linear-gradient(to right, #FFB76B 0%, #FF2212 30%, #FF7C00 60%, #FF7
     .main {
 
         height: 500px;
+        text-align: left;
 
     }
 
@@ -223,6 +225,7 @@ background: linear-gradient(to right, #FFB76B 0%, #FF2212 30%, #FF7C00 60%, #FF7
   /* experience for mobile */
 
   .Experience {
+    text-align: center;
     margin-top: 5rem;
 
   }
@@ -274,6 +277,8 @@ background: linear-gradient(to right, #FFB76B 0%, #FF2212 30%, #FF7C00 60%, #FF7
   @media screen and (min-width:1024px) {
     .Experience {
         padding: 0 12rem;
+        text-align: left;
+        
       }
     
     
@@ -409,6 +414,15 @@ background: linear-gradient(to right, #FFB76B 0%, #FF2212 30%, #FF7C00 60%, #FF7
   .hire-me {
     width: 100%;
   
+  }
+
+  .hire-me-content {
+    height: 50px;
+    padding: 1rem 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-self: center;
   }
 
 
